[gd_scene load_steps=2 format=3 uid="uid://dcbkgikp2rkro"]

[ext_resource type="Script" uid="uid://df8grtmr854li" path="res://turn_icon.gd" id="1_cqemw"]

[node name="TurnIcon" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cqemw")

[node name="nameLabel" type="Button" parent="."]
layout_mode = 2
text = "test"

[node name="hpLabel" type="Label" parent="."]
layout_mode = 2
theme_override_font_sizes/font_size = 11
text = "HP"

[node name="mpLabel" type="Label" parent="."]
layout_mode = 2
theme_override_font_sizes/font_size = 11
text = "MP"

[connection signal="pressed" from="nameLabel" to="." method="_on_name_label_pressed"]
